--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: #FCF5EB;
   margin-bottom: 500px;
-  font-family:  Helvetica,Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -10,6 +10,7 @@ body {
   background-color: #FCF5EB;
   height: 50vh;
 }
+
 .update-section {
   background-color: #e6ffda;
   /* height: 50vh; */
@@ -35,6 +36,7 @@ body {
   height: 32px;
   background-color: rgb(37, 211, 102);
 }
+
 .btn i {
   color: black;
   font-size: 16px;
@@ -47,12 +49,13 @@ body {
   margin: 96px 0;
   border-radius: 20px;
   overflow: hidden;
-  background-image: url("assets/images/hero_img.png");
+  background-image: url("../images/hero_img.png");
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
   background-clip: border-box;
 }
+
 .hero-img .row {
   width: 1080px;
 }
@@ -61,10 +64,11 @@ body {
   font-size: 80px;
   font-weight: 500;
   line-height: 1.0;
-  letter-spacing:  -1px;
+  letter-spacing: -1px;
   color: #fff;
 }
-.hero-img p{
+
+.hero-img p {
   font-size: 18px;
 }
 
@@ -74,16 +78,19 @@ body {
   background-color: rgb(37, 211, 102);
   border-radius: 10px;
   color: black;
-  border-radius:  25px;
+  border-radius: 25px;
   font-size: 16px;
   padding: 0 20px;
   font-weight: 400;
 }
-.btn-lg.btn-white{
+
+.btn-lg.btn-white {
   background-color: #ffffff;
   color: #000000;
 }
-.btn.btn-lg:hover, .btn.btn-lg .white:hover {
+
+.btn.btn-lg:hover,
+.btn.btn-lg .white:hover {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
 }
@@ -102,6 +109,7 @@ width: 900px;
 .custom-underline-red {
   text-decoration-color: rgb(37, 211, 102);
 }
+
 .freely {
   color: rgb(37, 211, 102);
 }
@@ -111,8 +119,8 @@ width: 900px;
   /* color: #fff; */
 }
 
-footer{
-  background-color:  rgb(17, 27, 33);
+footer {
+  background-color: rgb(17, 27, 33);
   padding-top: 150px;
   padding-bottom: 50px;
 
@@ -124,7 +132,7 @@ footer{
   font-size: 12px;
 }
 
-nav a i{
+nav a i {
   color: #9900ff;
   font-size: 50px;
   font-weight: 900;
