--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -49,7 +49,7 @@ body {
   margin: 96px 0;
   border-radius: 20px;
   overflow: hidden;
-  background-image: url("https://raw.githubusercontent.com/MhdFahadM/WA-website-clone/refs/heads/main/assets/images/hero_img.png");
+  /* background-image: url("https://raw.githubusercontent.com/MhdFahadM/WA-website-clone/refs/heads/main/assets/images/hero_img.png"); */
   background-repeat: no-repeat;
   background-position: top;
   background-size: cover;
